[workspace]
members = ["fw", "frames"]
resolver = "3"

[workspace.package]
authors = ["flippette <me@flippo.cc>"]
edition = "2024"
license = "Unlicense"
version = "0.1.0"

[workspace.dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
display-interface = "0.5"
display-interface-spi = "0.5"
embassy-executor = "0.7"
embassy-time = "0.4"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3"
esp-backtrace = "0.15"
esp-hal = "0.23"
esp-hal-embassy = "0.6"
frames.path = "./frames"
heapless = "0.8"
proc-macro2 = "1.0"
quote = "1.0"
riscv = "0.13"
static_cell = "2.1"
syn = "2.0"
tempfile = "3.17"
tinybmp = "0.6"
weact-studio-epd = "0.1"
